# sdb

./: pyproject.toml
sdb/: db.py  perf.py  server.py
sdb/templates/: base.html  bootstrap_table.html  create.html  table.html  tables.html
